# dex-os-64

./: .gitignore  BIOS_BOOT_GUIDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
boot/grub/: grub.cfg
cmake/toolchains/: aarch64-efi.cmake  i386-elf.cmake  x86_64-efi.cmake
config/qemu/: aarch64.args  x86_64.args
scripts/: build.sh  make_iso.sh  make_usb.sh  run_qemu.sh  run_qemu_bios.sh
src/kernel/: CMakeLists.txt  kmain.c
src/kernel/arch/x86_64/: linker.ld
src/kernel/arch/x86_64/boot/: multiboot2.S
src/kernel/mm/: kmalloc.c  kmalloc.h  pmm.c  pmm.h  vmm.c  vmm.h
src/kernel64/: CMakeLists.txt  console.c  console.h  cpuid.h  input.c  input.h  io.h  kmain64.c  linker.ld  mb2.h  memtest.c  memtest.h  serial.c  serial.h  shell.c  start64.S  version.h
src/kernel64/block/: block.c  block.h  memdisk.c  ramdisk.c
src/kernel64/dev/: device.c  device.h  display_console.c  keyboard_ps2.c
src/kernel64/fs/: devfs.c  exfat.c  exfat.h  rootfs.c
src/kernel64/lib/: mem.c
src/kernel64/pci/: pci.c  pci.h
src/kernel64/sched/: sched.c  sched.h
src/kernel64/usb/: usb.c  usb.h
src/kernel64/vfs/: vfs.c  vfs.h
src/loader32/: CMakeLists.txt  linker.ld  loader.S  loader_simple.S
src/uefi/: CMakeLists.txt  efi_main.c  efi_utils.h
tests/: smoke.sh
